--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/MGlyer/basicToDo#readme",
   "dependencies": {
     "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3"
